backup_individuals/sjeng/use_undefined_identifier/c2/std_eval
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/std_eval/src/neval.c:1025:11: error: use of undeclared identifier 'xmmword_41B640'
v146[0] = xmmword_41B640; 
          ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/std_eval/src/neval.c:1026:11: error: use of undeclared identifier 'xmmword_41B650'
v142[0] = xmmword_41B650; 
          ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/std_eval/src/neval.c:1027:11: error: use of undeclared identifier 'xmmword_41B640'
v146[1] = xmmword_41B640; 
          ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/std_eval/src/neval.c:1028:11: error: use of undeclared identifier 'xmmword_41B650'
v142[1] = xmmword_41B650; 
          ^
4 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/std_eval/src/obj/neval.o] Error 1
